--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
+.finished{
+    text-decoration: line-through;
+}
+
+.entirety {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    border: solid black 1px;
+}
+
+.section {
+    width: 100%;
+    display: flex;
+    align-items: flex-end;
+    flex-direction: column;
+}
+
+li {
+    display: flex;
+    justify
+    
+}
