--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -1,15 +1,22 @@
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
 <div class='entirety'>
     <h1>TODO List</h1>
     <h4>A place to store your todos</h4>
+    <input type="text" value="Filter your to-dos" class="input" onfocus="this.value=''" input [(ngModel)]="searchText">
     <ol class='section'>
-        <li *ngFor="let tasks of todo">
-            <div>
-                <button (click)="isCompleted(tasks)" *ngIf="tasks.completed === false">Completed</button>
-                <p [ngClass]="{'finished' : tasks.completed}">{{tasks.task}}</p>
-                <button class='x'>X</button>
+        <li *ngFor="let tasks of task | filter:searchText; let i = index">
+            <div class="listCompletedx">
+                <div class="listCompleted">
+                    <button class="completedButton" (click)="isCompleted(tasks)"
+                        *ngIf="tasks.completed === false">Completed</button>
+                    <p class="whatTodo" [ngClass]="{'finished' : tasks.completed}">{{tasks.task}}</p>
+                </div>
+                <button class='x' (click)="removeTask(todo)">X</button>
             </div>
         </li>
     </ol>
     <h4>Add your to-do</h4>
-    <button class='add'>Add</button>
+    <input type="text" class="input" [(ngModel)]="newTask">
+    <button class='add' (click)="addTask()">Add</button>
 </div>
